--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,11 @@
 #logoImg{
     width: 31px;
 }
+
+.mainSection{
+    background: url(../assets/retro-2031321_1920.png) center;
+    height: calc(100vh);
+    margin-top: 0;
+    padding-top: 0;
+}
+
