--- a/style/style.css
+++ b/style/style.css
@@ -15,3 +15,14 @@
     padding-top: 0;
 }
 
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px; 
+    background-color: bisque;
+  }
+  
+  .footerText {
+    margin: 0;
+  }
