--- a/style/stylephotography.css
+++ b/style/stylephotography.css
@@ -1,14 +1,7 @@
 /* hero-image css styles */
-
-.hero-image {
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  opacity: 0.8;
+#logoImg {
+  width: 31px;
 }
-
 .hero-text {
   text-align: center;
   position: absolute;
@@ -18,36 +11,6 @@
   color: white;
 }
 
-/* .page-wrap{
-    width: 100%;
-    height: 100%;
-    position: relative;
-  } */
-p {
-  font-size: 35px;
-}
-
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
-
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
-}
-#mailto a:hover {
-  text-decoration: none;
-  color: yellow;
-}
-
-/* compact.css */
 body {
   background-repeat: no-repeat;
   background-size: cover;
@@ -161,177 +124,7 @@ h2 {
 #about-me {
   padding: 30px;
 }
-footer {
-  text-align: center;
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  padding-bottom: 20px;
-}
 
-/* BS4 carousel slider */
-.bs-slider {
-  max-height: calc(100vh - 71px);
-  overflow: hidden;
-}
-
-/* GRID GALLERY.CSS */
-
-#grid-pics {
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-bottom: 4px;
-  padding-top: 4px;
-  background: #ddd;
-}
-.gallery-block.grid-gallery {
-  padding-bottom: 60px;
-  padding-top: 60px;
-}
-
-.gallery-block.grid-gallery .heading {
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.gallery-block.grid-gallery .heading h2 {
-  font-weight: bold;
-  font-size: 1.4rem;
-  text-transform: uppercase;
-}
-
-.gallery-block.grid-gallery a:hover {
-  opacity: 0.8;
-}
-
-.gallery-block.grid-gallery .item img {
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
-  transition: 0.8s;
-}
-
-.gallery-block.grid-gallery .item {
-  margin-bottom: 20px;
-}
-
-@media (min-width: 576px) {
-  .gallery-block.grid-gallery .scale-on-hover:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
-  }
-}
-
-/* CARD GALLERY.CSS */
-
-.gallery-block {
-  padding-bottom: 60px;
-  padding-top: 60px;
-}
-
-.gallery-block .heading {
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.gallery-block .heading h2 {
-  font-weight: bold;
-  font-size: 1.4rem;
-  text-transform: uppercase;
-}
-
-.gallery-block.cards-gallery h6 {
-  font-size: 17px;
-  font-weight: bold;
-}
-
-.gallery-block.cards-gallery .card {
-  transition: 0.4s ease;
-}
-
-.gallery-block.cards-gallery .card img {
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
-}
-
-.gallery-block.cards-gallery .card-body {
-  text-align: center;
-}
-
-.gallery-block.cards-gallery .card-body p {
-  font-size: 15px;
-}
-
-.gallery-block.cards-gallery a {
-  color: #212529;
-}
-
-.gallery-block.cards-gallery a:hover {
-  text-decoration: none;
-}
-
-.gallery-block.cards-gallery .card {
-  margin-bottom: 30px;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
-}
-
-@media (min-width: 576px) {
-  .gallery-block .transform-on-hover:hover {
-    transform: translateY(-10px) scale(1.02);
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
-  }
-}
-
-/* ABOUT ME SECTION */
-
-#about-me {
-  font-size: 15px;
-}
-
-#emailHelp {
-  text-align: center;
-  font-size: 20px;
-}
-
-/* css grid gallery */
-
-.grid-1 {
-  background: ddd;
-  -webkit-column-count: 1;
-  -webkit-column-gap: 10px;
-  -webkit-column-fill: auto;
-  -moz-column-count: 1;
-  -moz-column-gap: 10px;
-  -moz-column-fill: auto;
-  column-count: 1;
-  column-gap: 10px;
-  column-fill: auto;
-}
-
-.grid-item-1 {
-  display: inline-block;
-  background: #ddd;
-  margin: 0 0 10px;
-  padding: 10px;
-  padding-bottom: 5px;
-  -webkit-column-break-inside: avoid;
-  -moz-column-break-inside: avoid;
-  column-break-inside: avoid;
-}
-
-.hr-2 {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ddd;
-  margin: 0.5em 10px;
-  padding: 0;
-}
-
-.img-2 {
-  width: 100%;
-}
-
-#p1 {
-  font-size: 15px !important;
-  color: green !important;
-}
 
 @media (min-width: 450px) {
   .grid-1 {
