--- a/style/styleprojects.css
+++ b/style/styleprojects.css
@@ -9,13 +9,13 @@ $main-blue: #0076bd !default;
 $main-blue-rgb-015: rgba(0, 118, 189, 0.1) !default;
 
 
-body {
+/* body {
 	font-family: "Baloo 2", cursive;
 	font-size: 16px;
 	color: #ffffff;
 	text-rendering: optimizeLegibility;
 	font-weight: initial;
-}
+} */
 
 .dark {
 	background: #110f16;
@@ -215,15 +215,6 @@ a, a:hover {
       padding: 2rem 3.5rem;
     }
 		
-		/* .postcard__text:before {
-      content: "";
-      position: absolute;
-      display: block;
-      
-      top: -20%;
-      height: 130%;
-      width: 55px;
-    } */
 	
   .postcard.dark {
 		.postcard__text:before {
@@ -364,12 +355,6 @@ a, a:hover {
 			transparent 50%
 		);
 	}
-
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
   
   #logoImg {
     width: 31px;
