--- a/style/stylephotography.css
+++ b/style/stylephotography.css
@@ -126,3 +126,37 @@ h2 {
     column-count: 4;
   }
 }
+
+.navbar {
+  background-color: #f8f9fa; /* Arka plan rengi */
+  border: none; /* Kenarlık olmaması */
+}
+
+.navbar-brand {
+  padding: 15px 0; /* Marka logoları için boşluk */
+}
+
+.navbar-nav {
+  margin: 0; /* Sol ve sağ boşlukları kaldırma */
+}
+
+.navbar-nav li {
+  display: inline-block; /* Menü öğelerini yan yana düzenleme */
+}
+
+.navbar-nav li a {
+  padding: 15px 20px; /* Menü öğeleri arasındaki boşluk */
+  color: #333; /* Metin rengi */
+}
+
+.navbar-nav li a:hover {
+  color: #007bff; /* Üzerine gelindiğinde metin rengi */
+}
+
+.navbar-toggle {
+  margin-right: 0; /* Mobil cihazlarda toggle butonunu sağa hizalama */
+}
+
+.navbar-toggle .icon-bar {
+  background-color: #333; /* Toggle simgelerinin rengi */
+}
