--- a/style/stylephotography.css
+++ b/style/stylephotography.css
@@ -8,6 +8,7 @@ body {
   background-size: cover;
   background-color: #ddd;
   padding-bottom: 10px;
+  background-image: url("../assets/pixelphoto.jpg");
 }
 
 @media (max-width: 979px) {
@@ -17,7 +18,17 @@ body {
 }
 * {
   font-family: "Raleway", sans-serif;
+  
 }
+
+.photography {
+  margin-top: 0px;
+}
+
+.btnback{
+  margin-bottom: 0;
+}
+
 h2 {
   color: rgb(37, 28, 28);
   font-family: "Raleway", sans-serif;
@@ -160,3 +171,4 @@ h2 {
 .navbar-toggle .icon-bar {
   background-color: #333; /* Toggle simgelerinin rengi */
 }
+
