--- a/style/style.css
+++ b/style/style.css
@@ -9,13 +9,20 @@
 }
 
 .mainSection {
-  background: url(../assets/pixelguy.jpeg);
+  background: url(../assets/pixelguy2.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  height: calc(100vh);
+  background-size: cover;
+  height: 100vh;
+  width: 100vh;
+  
 }
 
 .footer {
+  /* position: absolute; */
+  bottom: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
