--- a/style/style.css
+++ b/style/style.css
@@ -9,17 +9,14 @@
 }
 
 .mainSection {
-  background: url(../assets/pixelguy2.jpg);
+  background: url(../assets/pixelguy2.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  width: 100vh;
-  
+  height: 100vh;  
 }
 
 .footer {
-  /* position: absolute; */
   bottom: 0;
   left: 0;
   width: 100%;
