--- a/style/styleabout.css
+++ b/style/styleabout.css
@@ -1,21 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
-$main-green: #79dd09 !default;
-$main-green-rgb-015: rgba(121, 221, 9, 0.1) !default;
-$main-yellow: #bdbb49 !default;
-$main-yellow-rgb-015: rgba(189, 187, 73, 0.1) !default;
-$main-red: #bd150b !default;
-$main-red-rgb-015: rgba(189, 21, 11, 0.1) !default;
-$main-blue: #0076bd !default;
-$main-blue-rgb-015: rgba(0, 118, 189, 0.1) !default;
-
-
-/* body {
-	font-family: "Baloo 2", cursive;
-	font-size: 16px;
-	color: #ffffff;
-	text-rendering: optimizeLegibility;
-	font-weight: initial;
-} */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Public Pixel', sans-serif;
+                                                
+}
 
 .dark {
 	background: #110f16;
@@ -369,6 +358,7 @@ a, a:hover {
 	}
   
   #logoImg {
-    width: 31px;
+    /* width: 150px; */
+    max-width: 120px;
   }
 }
