--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,13 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Public Pixel', sans-serif;
+                                                
 }
 
 #logoImg {
-  width: 31px;
+  /* width: 150px; */
+  max-width: 120px;
 }
 
 .mainSection {
