--- a/style/stylephotography.css
+++ b/style/stylephotography.css
@@ -1,6 +1,13 @@
-/* hero-image css styles */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Public Pixel', sans-serif;                                             
+}
+
 #logoImg {
-  width: 31px;
+  /* width: 150px; */
+  max-width: 120px;
 }
 
 body {
@@ -16,10 +23,7 @@ body {
     padding-top: 0px;
   }
 }
-* {
-  font-family: "Raleway", sans-serif;
-  
-}
+
 
 .photography {
   margin-top: 0px;
