--- a/style/style.css
+++ b/style/style.css
@@ -7,8 +7,8 @@
 }
 
 #logoImg {
-  /* width: 150px; */
-  max-width: 120px;
+  /* width: 120px; */
+  max-width: 100%;
 }
 
 .mainSection {
@@ -22,11 +22,12 @@
 .footer {
   bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
+  height: 100px;
   background-color: bisque;
 }
 
