--- a/style/styleabout.css
+++ b/style/styleabout.css
@@ -358,7 +358,7 @@ a, a:hover {
 	}
   
   #logoImg {
-    /* width: 150px; */
-    max-width: 120px;
+    /* width: 120px; */
+    max-width: 100%;
   }
 }
