--- a/style/styleprojects.css
+++ b/style/styleprojects.css
@@ -1,12 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"); */
-/* $main-green: #79dd09 !default;
-$main-green-rgb-015: rgba(121, 221, 9, 0.1) !default;
-$main-yellow: #bdbb49 !default;
-$main-yellow-rgb-015: rgba(189, 187, 73, 0.1) !default;
-$main-red: #bd150b !default;
-$main-red-rgb-015: rgba(189, 21, 11, 0.1) !default;
-$main-blue: #0076bd !default;
-$main-blue-rgb-015: rgba(0, 118, 189, 0.1) !default; */
 
 
 * {
@@ -356,7 +347,7 @@ a, a:hover {
 	}
   
   #logoImg {
-    /* width: 150px; */
-    max-width: 120px;
+    /* width: 120px; */
+    max-width: 100%;
   }
 }
