--- a/style/styleprojects.css
+++ b/style/styleprojects.css
@@ -351,3 +351,15 @@ a, a:hover {
     max-width: 100%;
   }
 }
+
+.navo{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(252, 190, 190, 0.692); 
+  backdrop-filter: blur(5px); 
+  z-index: 1000; 
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.295);
+}
+
+
