--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,7 @@
   justify-content: center;
   align-items: center;
   height: 100px;
-  background-color: bisque;
+  background-color: #EF525B;
 }
 
 .footerText {
@@ -63,3 +63,4 @@
   z-index: 1000; 
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.295);
 }
+
