--- a/style/style.css
+++ b/style/style.css
@@ -3,8 +3,9 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Public Pixel', sans-serif;
-                                                
+  /* cursor:none                                   */
 }
+
 
 #logoImg {
   /* width: 120px; */
