--- a/style/styleabout.css
+++ b/style/styleabout.css
@@ -11,8 +11,9 @@
 }
 
 
-.light {
-	background: #f3f5f7;
+.sectionn {
+  background: #A1DAFF;
+  height: 100vh;
 }
 
 a, a:hover {
@@ -43,7 +44,7 @@ a, a:hover {
 		background-color: #18151f;
 	}
 	&.light {
-		background-color: #e1e5ea;
+		background-color: #486273;
 	}
 	
 	.t-dark {
@@ -84,7 +85,7 @@ a, a:hover {
     height: 10px;
     margin: 10px 0;
     border-radius: 5px;
-    background-color: #424242;
+    background-color: #A1DAFF;
     transition: width 0.2s ease;
   }
 
@@ -133,7 +134,7 @@ a, a:hover {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: linear-gradient(-70deg, #424242, transparent 50%);
+    background-image: linear-gradient(100deg, #50B3F2, transparent 90%);
     opacity: 1;
     border-radius: 10px;
   }
@@ -360,5 +361,15 @@ a, a:hover {
   #logoImg {
     /* width: 120px; */
     max-width: 100%;
+  }
+
+  .navo{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #265472; 
+    backdrop-filter: blur(5px); 
+    z-index: 1000; 
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.295);
   }
 }
