--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,11 @@
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: 'Public Pixel', sans-serif;
-  /* cursor:none                                   */
+  cursor:url('../assets/cursor.png'),auto;
 }
-
 
 #logoImg {
   /* width: 120px; */
@@ -36,6 +36,15 @@
   margin: 0;
 }
 
+.btn:hover {
+  box-shadow: 0.4rem 0.4rem 0rem black;
+  cursor: URL("../assets/cursor2.png"), auto;
+  transform: translate(-0.4rem, -0.4rem);
+}
+
+.a:hover {
+  cursor: URL("../assets/cursor2.png"), auto;
+}  
 .mainSectionButtons .row {
   display: flex;
   /* flex-direction: column; */
