--- a/style/styleabout.css
+++ b/style/styleabout.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Public Pixel', sans-serif;
+  cursor:url('../assets/cursor.png'),auto;
                                                 
 }
 
