--- a/style/stylephotography.css
+++ b/style/stylephotography.css
@@ -2,7 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Public Pixel', sans-serif;                                             
+  font-family: 'Public Pixel', sans-serif;       
+  cursor:url('../assets/cursor.png'),auto;                                      
 }
 
 #logoImg {
