--- a/style/styleblogs.css
+++ b/style/styleblogs.css
@@ -126,6 +126,7 @@
   
         &:hover {
           background: #BF544B;
+          cursor: URL("../assets/cursor2.png"), auto;
         }
       }
     }
