--- a/style/styleprojects.css
+++ b/style/styleprojects.css
@@ -21,6 +21,7 @@
 a, a:hover {
 	text-decoration: none;
 	transition: color 0.3s ease-in-out;
+  /* cursor: URL("../assets/cursor2.png"), auto; */
 }
 
 
@@ -30,6 +31,8 @@ a, a:hover {
 	text-align: center;
 	font-size: 2.5rem;
 }
+
+
 
 /* Cards */
 .postcard {
@@ -126,6 +129,7 @@ a, a:hover {
 
       &:hover {
         background: #B0D9C6;
+        cursor: URL("../assets/cursor2.png"), auto;
         
       }
     }
