--- a/style/styleabout.css
+++ b/style/styleabout.css
@@ -7,6 +7,12 @@
                                                 
 }
 
+.anin:hover {
+  /* box-shadow: 0.4rem 0.4rem 0rem black; */
+  cursor: URL("../assets/cursor2.png"), auto;
+  /* transform: translate(-0.2rem, -0.2rem); */
+  
+}
 .dark {
 	background: #110f16;
 }
